--- a/styles/global.css
+++ b/styles/global.css
@@ -41,6 +41,9 @@ h2,
 h3 {
   font: inherit;
 }
+img {
+  max-width: 100%;
+}
 
 .container {
   max-width: 1280px;
@@ -48,12 +51,6 @@ h3 {
   margin-inline: auto;
 }
 
-/* utility-first */
-
-.grid {
-  display: grid;
-}
-
-.grid-flow-col {
-  grid-auto-flow: column;
+main {
+  margin-top: 40px;
 }
