--- a/styles/section.css
+++ b/styles/section.css
@@ -9,13 +9,13 @@ section header {
     gap: 8px;
 
     span {
-      background-image: url(../assets/icons/ArrowRight.svg);
+      background-image: url(..assets/icons/ArrowRight.svg);
       width: 16px;
       height: 16px;
     }
 
     &:hover span {
-      background-image: url(../assets/icons/ArrowRight-hover.svg);
+      background-image: url(..assets/icons/ArrowRight-hover.svg);
     }
   }
 }
