--- a/styles/header.css
+++ b/styles/header.css
@@ -20,3 +20,21 @@
   border-inline: none;
   justify-content: space-between;
 }
+
+@media screen and (max-width: 375px) {
+  #primary {
+    div {
+      strong {
+        display: none;
+      }
+    }
+
+    div:nth-child(2) {
+      width: 100px;
+      height: 15px;
+    }
+  }
+
+  #secondary {
+  }
+}
